# webserv

./: .gitignore  CMakeLists.txt  Connection.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  KqueueEvents.cpp  KqueueEvents.hpp  Makefile  README.md  Server.cpp  Server.hpp  ServerTemp.hpp  Socket.cpp  Socket.h  Socket.hpp  VirtualServer.cpp  VirtualServer.hpp  check.cpp  main.cpp  test.cpp  test3.txt  todo.txt  utils.cpp  utils.hpp  webserv_config_example
incl/: CgiHandler.hpp  FileStats.hpp  HttpRequest.hpp  HttpResponse.hpp  IManager.hpp  ISubscriber.hpp  KqueueEvents.hpp  Location.hpp  MimeType.hpp  Server.hpp  Session.hpp  Socket.hpp  Utils.hpp  VirtualServer.hpp
src/: HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  KqueueEvents.cpp  KqueueEvents.hpp  Location.cpp  Server.cpp  Server.hpp  Socket.cpp  Utils.cpp  Utils.hpp  VirtualServer.cpp  VirtualServer.hpp
srcs/: CgiHandler.cpp  FileStats.cpp  HttpRequest.cpp  HttpResponse.cpp  KqueueEvents.cpp  Location.cpp  MimeType.cpp  Server.cpp  Session.cpp  Socket.cpp  Utils.cpp  VirtualServer.cpp  check.cpp  main.cpp
www/error/: 404.html  405.html
www/final/: index.php
www/final/css/: font.css
www/test1/: 404.html  index.html
www/test2/: index.html
www/test3/: index.html
